[gd_scene load_steps=5 format=3 uid="uid://cjlys4gia8ews"]

[ext_resource type="Script" path="res://Scripts/enemy_base.gd" id="1_mbge3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f2qsv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mkth7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_61s83"]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_mbge3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f2qsv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mkth7")

[node name="SpawnPoint" type="Node2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 4.0
offset_bottom = 27.0

[node name="AttackTimer" type="Timer" parent="."]

[node name="AggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_61s83")
